# mcp-memory-server

./: README.md  package-lock.json  package.json
mcp-rust-server/: Cargo.toml  README.md  package.json  test-mcp-server.js
mcp-rust-server/src/: main.rs  utils.rs
src/: config.rs  embeddings.rs  main.rs  models.rs
src/storage/: chroma.rs  mod.rs
