[package]
name = "mcp-rust-server"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk.git", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories-next = "2.0"
async-trait = "0.1"
dotenvy = "0.15"

# ChromaDB HTTP client
reqwest = { version = "0.11", features = ["json"] }
url = "2.4"

# Embedding model (ONNX Runtime)
ort = { version = "1.14.6", features = ["download-binaries"] }
tokenizers = "0.13.3"
ndarray = "0.15"
